policy-extended.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: p3-p4-gr
spec:
  podSelector:
    matchLabels:
      app: drone3
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: drone4
        - podSelector:
            matchLabels:
              app: ground
  egress:
    - to:
        - podSelector:
            matchLabels:
              app: drone4
        - podSelector:
            matchLabels:
              app: ground
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: p4-p3-gr
spec:
  podSelector:
    matchLabels:
      app: drone4
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: drone3
        - podSelector:
            matchLabels:
              app: ground
  egress:
    - to:
        - podSelector:
            matchLabels:
              app: drone3
        - podSelector:
            matchLabels:
              app: ground
---

kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: p1-p2-ground
spec:
  podSelector:
    matchLabels:
      app: drone1
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: drone2
        - podSelector:
            matchLabels:
              app: ground
  egress:
    - to:
        - podSelector:
            matchLabels:
              app: drone2
        - podSelector:
            matchLabels:
              app: ground
